# P-star

./: .gitignore  AUTHORS  ChangeLog  LICENCE  Makefile  README  README.md  config.h  config.h.in  config.h.in~  config.status  configure.ac  count_lines.sh  fix_dependency_libs.sh  global.h  libtool  prepend_licence.sh
P-star for windows/: P-star for windows.sln  P-star for windows.vcxproj  P-star for windows.vcxproj.filters  ReadMe.txt  stdafx.h
P-star for windows/Debug/: vc120.idb
P-star for windows/Debug/P-star f.4BD57A0B.tlog/: CL.read.1.tlog  CL.write.1.tlog  P-star for windows.lastbuildstate  cl.command.1.tlog
P-star for windows/Release/: .gitignore  P-star for windows.lastbuildstate  README.txt
P-star for windows/Release/P-star f.4BD57A0B.tlog/: CL.write.1.tlog  P-star for windows.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
debian/: .gitignore  README  README.Debian  README.source  changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  libapache2-mod-pstar.dirs  libapache2-mod-pstar.substvars  libpstar-mysql1.install  libpstar-mysql1.lintian-overrides  libpstar.substvars  libpstar1.install  libpstar1.lintian-overrides  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  p-star.cron.d.ex  p-star.default.ex  p-star.doc-base.EX  p-star.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  pstar.substvars  rules  watch.ex
debian/p-star/DEBIAN/: control  md5sums  shlibs
debian/p-star/usr/lib/: libwpl-1.0.so.0  libwpl-1.0.so.0.0.0  libwpl_mysql-1.0.so.0  libwpl_mysql-1.0.so.0.0.0
debian/p-star/usr/lib/pkgconfig/: libwpl-1.0.pc  libwpl_mysql-1.0.pc
debian/p-star/usr/share/doc/p-star/: README.md  copy_short.txt
docs/docbook/: fixchunk.pstar  generate_html.sh  generate_parts.sh  generate_web_docs.sh  install_web.sh  source.xml  template.xsl
include/: module.h
logo/: logo.xcf  logo_web.xcf  star_small.xcf
m4/: apache.m4
src/: .gitignore  Makefile  Makefile.am  config.doxygen  main.cpp  test2.whtml  wpl
src/apache2/: Makefile.am  apache_24.h  install_mod.sh  mod_pstar.cpp  pstar.load  pstar_httpd.h  pstar_io.cpp  pstar_io.h  pstar_pool.cpp  pstar_pool.h
src/libmysql/: Makefile  Makefile.am  libwpl_mysql-1.0.pc  libwpl_mysql-1.0.pc.in  libwpl_mysql-1.1.pc.in  libwpl_mysql-1.2.pc.in  libwpl_mysql.cpp  libwpl_mysql.h  mysql.cpp  mysql.h  mysql_pointers.h  mysql_res_holder.cpp  mysql_res_holder.h  mysql_row.cpp  mysql_row.h  mysql_stmt.cpp  mysql_stmt.h  mysql_types.h  parasites.cpp  parasites.h  sql.cpp  sql.h  value_sql.cpp  value_sql.h
src/libwpl/: Makefile  Makefile.am  array.cpp  array.h  block.cpp  block.h  block_conditional.cpp  block_conditional.h  block_for.cpp  block_for.h  block_foreach.cpp  block_foreach.h  block_if.cpp  block_if.h  block_intermediate.h  block_intermediate_state.cpp  block_intermediate_state.h  block_parser.cpp  block_parser.h  block_state.cpp  block_state.h  block_while.cpp  block_while.h  blocks.h  class.h  cloneable.h  debug.h  exception.cpp  exception.h  exp_deque.h  expression.cpp  expression.h  expression_state.cpp  expression_state.h  file.cpp  function.cpp  function.h  function_state.cpp  function_state.h  global.cpp  (+169 more)
tests/: .gitignore  array_test.pstar  array_test.pstar.result  array_test_first_count.pstar  array_test_first_count.pstar.result  get_test.pstar  get_test.pstar.result  hash_test.pstar  hash_test.pstar.result  run_tests.sh  test_auto.pstar  test_auto.pstar.result  test_declaration_in_condition.pstar  test_declaration_in_condition.pstar.result  test_dump_file.pstar  test_dump_file.pstar.result  test_dynamic_html_template.pstar  test_dynamic_html_template.pstar.result  test_env.pstar  test_env.pstar.result  test_expressions.pstar  test_expressions.pstar.result  test_file.pstar  test_file.pstar.result  test_for_loop.pstar  test_for_loop.pstar.result  test_foreach.pstar  test_foreach.pstar.result  test_functions.pstar  test_functions.pstar.result  test_if.pstar  test_if.pstar.result  test_json.pstar  test_json.pstar.result  test_json_dump.pstar  test_json_dump.pstar.result  test_multidim_array.pstar  test_multidim_array.pstar.result  test_mysql_database.pstar  test_mysql_database.pstar.result  (+40 more)
web/: .gitignore  .htaccess  code_snippets.pstar  documentation.pstar  download.pstar  home.pstar  how_to_get.pstar  how_to_run.pstar  index.php  layout.pstar  layout_columns.pstar  news.pstar  news.txt  pstar.css  quickstart.pstar  what_is.pstar  why_pstar.pstar
web/cgi-bin/: documentation  how_to_get  how_to_run  layout  what_is
web/install/: install.sh
